Refactor JS, fix hrs texts

--- a/src/assets/sass/components/_tile.scss
+++ b/src/assets/sass/components/_tile.scss
@@ -167,6 +167,6 @@
   background-color: $violet-social;
 }
 
-.tile__background[data-activity="Self Care"] {
+.tile__background[data-activity="Self-Care"] {
   background-color: $soft-orange-selfcare;
 }
