--- a/src/assets/sass/components/_tile.scss
+++ b/src/assets/sass/components/_tile.scss
@@ -15,7 +15,7 @@
     }
 
     @include respond-to("large") {
-      min-height: 12.5rem;
+      min-height: 10rem;
       min-width: 16rem;
     }
 
@@ -61,6 +61,7 @@
     padding-block: 2rem;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     gap: 0.8rem;
 
     &-title {
